<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:minWidth="400dp"
    android:minHeight="400dp"
    android:orientation="vertical">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTeachers"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    <TextView
        android:id="@+id/noFavorites"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="No Favorites"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/closeBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:backgroundTint="@color/black"
        android:text="Close" />
</LinearLayout>