...
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@id/backBtn" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvMeetings"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:paddingBottom="8dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
...
